k3s/manifests/portfolio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    component: portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
