k3s/manifests/portfolio/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: portfolio.martinbourbier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  name: http

  tls:
    - hosts:
      - portfolio.martinbourbier.com
      secretName: portfolio-tls
